yamls/jfrog-platform/networkpolicy_release-name-pipelines--networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: pipelines
    app.kubernetes.io/version: 1.19.4
    helm.sh/chart: pipelines-101.19.4
  name: RELEASE-NAME-pipelines--networkpolicy
spec:
  egress:
  - {}
  ingress:
  - {}
  podSelector:
    matchLabels:
      app.kubernetes.io/name: pipelines
  policyTypes:
  - Ingress
  - Egress
